# standaloneEEC

./: .gitignore  .gitmodules  CAres3_benchmark.cc  CAres3_checkbyhand.cc  CAres3_unittest.cc  CAres4_benchmark.cc  CAres4_checkbyhand.cc  CAres4_unittest.cc  CMakeLists.txt  README  README.md  axes.h  cov.h  distributions.py  example_jet.h  fromout.py  main.cc  makefile  makeplots.py  proj_unittest.cc  res3_benchmark.cc  res3_checkbyhand.cc  res3_unittest.cc  res4_benchmark.cc  res4_checkbyhand.cc  res4_standalone_benchmark.cc  res4_standalone_fastEEC.cc  res4_standalone_multi_array.cc  res4_standalone_multi_array_precomputed.cc  res4_standalone_transfer_benchmark.cc  res4_standalone_transfer_fastEEC.cc  res4_standalone_transfer_multi_array.cc  res4_standalone_transfer_vector.cc  res4_standalone_validate.cc  res4_standalone_vector.cc  res4_standalone_vector_precomputed.cc  res4_unittest.cc  run_tests.cc  target  testCalculator.h  (+15 more)
SRothman/armadillo-12.2.0/: ArmadilloConfig.cmake  CHANGELOG.html  CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  docs.html  libarmadillo.so.12.2.0
SRothman/armadillo-12.2.0/examples/: README.txt
SRothman/armadillo-12.2.0/examples/lib_win64/: README.txt
SRothman/armadillo-12.2.0/include/armadillo_bits/: config.hpp
SRothman/armadillo-12.2.0/tests1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  smoke_test
SRothman/armadillo-12.2.0/tmp/include/armadillo_bits/: config.hpp
SRothman/armadillo-12.2.0/tmp/misc/: armadillo.pc
drivers/: CAres3_benchmark.cc  CAres3_unittest.cc  CAres4_benchmark.cc  CAres4_unittest.cc  res3_checkbyhand.cc  res4_checkbyhand.cc  test_generic.cc
